# Project_OOP_4

./: README.md  pyproject.toml
classes/: connector.py  head_classes.py  vacancy.py
utils/: main.py  python_hh.json  sort.json  top.json
