[tool.poetry]
name = "project-oop-4]"
version = "0.1.0"
description = ""
authors = ["Alexandr Noskov <san9nosko8@gmail.com>"]
readme = "README.md"
packages = [{include = "project_oop_4]"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
